@@ -268,11 +268,6 @@ literal|true
 decl_stmt|;
 specifier|private
 specifier|static
-name|DocumentBuilder
-name|docBuilder
-decl_stmt|;
-specifier|private
-specifier|static
 name|SAXParser
 name|newSAXParser
 parameter_list|(
@@ -944,13 +939,6 @@ name|EntityResolver
 name|entityResolver
 parameter_list|)
 block|{
-if|if
-condition|(
-name|docBuilder
-operator|==
-literal|null
-condition|)
-block|{
 try|try
 block|{
 name|DocumentBuilderFactory
@@ -968,13 +956,14 @@ argument_list|(
 literal|false
 argument_list|)
 expr_stmt|;
+name|DocumentBuilder
 name|docBuilder
-operator|=
+init|=
 name|factory
 operator|.
 name|newDocumentBuilder
 argument_list|()
-expr_stmt|;
+decl_stmt|;
 if|if
 condition|(
 name|entityResolver
@@ -990,6 +979,9 @@ name|entityResolver
 argument_list|)
 expr_stmt|;
 block|}
+return|return
+name|docBuilder
+return|;
 block|}
 catch|catch
 parameter_list|(
@@ -1005,10 +997,6 @@ name|e
 argument_list|)
 throw|;
 block|}
-block|}
-return|return
-name|docBuilder
-return|;
 block|}
 specifier|private
 name|XMLHelper
